feat: implement dataset delete endpoint
